app/src/main/java/com/example/petvitals/domain/error/DisplayNameError.kt
package com.example.petvitals.domain.error

enum class DisplayNameError: Error {
    EMPTY_FIELD,
    TOO_LONG,
    INVALID_CHARACTERS
}
